# agent-channel

./: .gitignore  README.md  index.html  package-lock.json  package.json
mcp/: agent-channel-mcp.mjs
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: AgentList.tsx  Icons.tsx  MessagePane.tsx
src/lib/: storage.ts  tauri.ts  types.ts
src/styles/: app.css
