[package]
name = "agent-channel"
version = "0.1.0"
description = "Desktop chat gateway for local and remote agents"
authors = ["Agent Channel"]
edition = "2021"

[lib]
name = "agent_channel_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
axum = "0.8"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-notification = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
